force-app/main/default/objects/Edition_Issues__c/Edition_Issues__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Edition and Issues for Print Magazines</description>
    <label>Edition Issues</label>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Edition Issues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Edition Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>