force-app/main/default/objects/Edition_Issues__c/fields/Booking_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cutoff__c</fullName>
    <label>Booking Cutoff</label>
    <type>Date</type>
</CustomField>