force-app/main/default/objects/Edition_Issues__c/fields/Issue_Number__c.field-meta.xml
<CustomField>
    <fullName>Issue_Number__c</fullName>
    <label>Issue Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>